[package]
name = "mbus-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
futures-util = "0.3"
mbus-codec = { path = "../mbus-codec" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "signal"] }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
