[package]
name = "mbus-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
futures-util = "0.3"
mbus = { path = "../mbus" }
mbus-codec = { path = "../mbus-codec" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "signal", "time"] }
tokio-serial = "5"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4.4"